Updating Dreamwever Templates and Page Samples

--- a/business-profile.html
+++ b/business-profile.html
@@ -108,16 +108,16 @@ Based on Twitter Bootstrap
                             </div>
                             
                             <ul class="list-inline list-unstyled">
-                                <li><a href=""><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+</span></span></a></li>
                             </ul>
                         </div>
                                 
                         <div class="quarter">
                             <!-- Embeded Youtube Video -->
                             <div class="video-player" data-sly-test="${!properties.lightbox}">
-                                <iframe class="youtube-player" src="https://www.youtube.com/embed/V3Z9ugTj4-o" frameborder="0" allowfullscreen></iframe>
+                                <iframe title="DMV Youtube video" class="youtube-player" src="https://www.youtube.com/embed/V3Z9ugTj4-o" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
