--- a/general-landing.html
+++ b/general-landing.html
@@ -413,13 +413,13 @@ Based on Twitter Bootstrap
                 <div class="container">
                     <div class="carousel owl-carousel carousel-content">
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-ui-online.jpg" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-ui-online.jpg" alt="UI Online"></a>
                         </div>
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-apps.jpg" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-apps.jpg" alt="Apps"></a>
                         </div>
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-survey.png" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-survey.png" alt="Survey"></a>
                         </div>
                     </div>
                 </div>
