--- a/profile-landing.html
+++ b/profile-landing.html
@@ -100,9 +100,9 @@ Based on Twitter Bootstrap
                             </div> 
                             
                             <ul class="list-inline list-unstyled m-t-md">
-                                <li><a href=""><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+</span></span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -142,13 +142,13 @@ Based on Twitter Bootstrap
                 <div class="container">
                     <div class="carousel owl-carousel carousel-content">
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-ui-online.jpg" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-ui-online.jpg" alt="UI Online"></a>
                         </div>
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-apps.jpg" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-apps.jpg" alt="Apps"></a>
                         </div>
                         <div class="item">
-                            <a href=""><img src="/sample/images/ad-survey.png" alt=""></a>
+                            <a href=""><img src="/sample/images/ad-survey.png" alt="Survey"></a>
                         </div>
                     </div>
                 </div>
