Fixing ARIA accessibility issues and cleanup of several files.

--- a/sample/breadcrumb.html
+++ b/sample/breadcrumb.html
@@ -89,8 +89,8 @@ Based on Twitter Bootstrap
                      <!--#include virtual="/sample/modules/breadcrumb-dynamic.html" -->
                 </div>
                  <div class="half">
-                    <h2><label for="sample-media">Source Code:</label></h2>
-                    <textarea id="sample-media" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/breadcrumb-dynamic.html" --></textarea>
+                    <h2><label for="sample-media-dynamic">Source Code:</label></h2>
+                    <textarea id="sample-media-dynamic" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/breadcrumb-dynamic.html" --></textarea>
                 </div> 
             </div>
         </main>
