--- a/sample/exam-list.html
+++ b/sample/exam-list.html
@@ -78,7 +78,7 @@ Based on Twitter Bootstrap
                  <div class="half">
                     <h2>Source Code:</h2>
                     
-                    <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/exam-list.html" --></textarea>
+                    <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/exam-list.html" --></textarea>
                     
                 </div> 
             </div>
