--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -124,8 +124,8 @@ Based on Twitter Bootstrap
                                         <h4 class="modal-title">HTML Markup</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-news-blocks">Source Code:</label>
-                                        <textarea id="sample-news-blocks" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></textarea>
+                                        <label for="sample-image-blocks">Source Code:</label>
+                                        <textarea id="sample-image-blocks" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></textarea>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -159,8 +159,8 @@ Based on Twitter Bootstrap
                             <h4 class="modal-title">HTML Markup</h4>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-news-blocks">Source Code:</label>
-                            <textarea id="sample-news-blocks" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-links.html" --></textarea>
+                            <label for="sample-links">Source Code:</label>
+                            <textarea id="sample-links" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-links.html" --></textarea>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
