--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -85,10 +85,10 @@ Based on Twitter Bootstrap
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location.html" --></textarea>
+                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-schema.html" --></textarea>
+                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
@@ -107,17 +107,17 @@ Based on Twitter Bootstrap
                     <h2>Source Code:</h2>
                     
                     <div class="tab-group">
-                        <ul id="sourceCode" class="nav nav-tabs" role="tablist">
+                        <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
                             <li class="active"><a href="#minihtml" role="tab" data-toggle="tab">HTML Markup</a></li>
                             <li><a href="#minimicrodata" role="tab" data-toggle="tab">Microdata</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="minihtml">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-mini.html" --></textarea>
+                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-mini.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="minimicrodata">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-mini-schema.html" --></textarea>
+                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-mini-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
@@ -133,17 +133,17 @@ Based on Twitter Bootstrap
                 <h2>Source Code:</h2>
                     
                 <div class="tab-group">
-                    <ul id="sourceCode" class="nav nav-tabs" role="tablist">
+                    <ul id="sourceCode3" class="nav nav-tabs" role="tablist">
                         <li class="active"><a href="#bannerhtml" role="tab" data-toggle="tab">HTML Markup</a></li>
                         <li><a href="#bannermicrodata" role="tab" data-toggle="tab">Microdata</a></li>
                     </ul>
                     <!-- Tab panes -->
                     <div class="tab-content responsive">
                         <div class="tab-pane active" id="bannerhtml">
-                             <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-banner.html" --></textarea>
+                             <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-banner.html" --></textarea>
                         </div>
                         <div class="tab-pane" id="bannermicrodata">
-                             <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-banner-schema.html" --></textarea>
+                             <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/location-banner-schema.html" --></textarea>
                         </div>
                     </div>
                 </div>
