--- a/sample/modules/location-full.html
+++ b/sample/modules/location-full.html
@@ -5,7 +5,7 @@
             <div class="photo example" style="background:url(images/734x300.gif) center center no-repeat"></div>
         </div>
         <div class="third">
-            <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d396893.8104585335!2d-121.05825235045742!3d38.99859205177154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809b126e664ee693%3A0xa03409379c35e4f1!2sPlacer+County%2C+CA!5e0!3m2!1sen!2sus!4v1411583801472" height="300"></iframe></div>
+            <div class="map"><iframe title="Map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d396893.8104585335!2d-121.05825235045742!3d38.99859205177154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809b126e664ee693%3A0xa03409379c35e4f1!2sPlacer+County%2C+CA!5e0!3m2!1sen!2sus!4v1411583801472" height="300"></iframe></div>
         </div>
     </div>
     
