--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -33,12 +33,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i>
+                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
@@ -81,12 +81,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i>
+                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
@@ -129,12 +129,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary--hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i>
+                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
