--- a/sample/news-detail.html
+++ b/sample/news-detail.html
@@ -83,11 +83,11 @@ Based on Twitter Bootstrap
                     <!-- Tab panes -->
                     <div class="tab-content responsive">
                         <div class="tab-pane active" id="html">
-                            <textarea id="sample-news-detail" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-detail.html" --></textarea>
+                            <textarea aria-label="HTML Markup" id="sample-news-detail" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-detail.html" --></textarea>
                         </div>
                         <div class="tab-pane" id="microdata">
                             <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each news-item.</p>
-                            <textarea id="sample-news-detail" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-detail-schema.html" --></textarea>
+                            <textarea aria-label="Microdata" id="sample-news-detail-microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-detail-schema.html" --></textarea>
                         </div>
                     </div>
                 </div>
