--- a/sample/news-list.html
+++ b/sample/news-list.html
@@ -164,7 +164,7 @@ Based on Twitter Bootstrap
                                             </div>
                                             <div class="tab-pane" id="microdata">
                                                 <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each news-item.</p>
-                                                <textarea id="sample-news-list" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-list-schema.html" --></textarea>
+                                                <textarea id="sample-news-list-microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/news-list-schema.html" --></textarea>
                                             </div>
                                         </div>
                                     </div><!--/ modal content end-->
