--- a/search-directory.html
+++ b/search-directory.html
@@ -85,7 +85,7 @@ Based on Twitter Bootstrap
                             <form id="agency_form" class="agency-form">
                                 <div class="textfield-container">
                                     <label for="search_local_textfield" accesskey="s" class="hidden">Agency Search: </label>
-                                    <input type="text" name="q" id="search_local_textfield" class="search-textfield" size="35" autocomplete="off" value="Search" onfocus="if(this.value=='Search')this.value=''" onblur="if(this.value=='')this.value='Search'" />
+                                    <input type="text" name="q" id="search_local_textfield" class="search-textfield" size="35" autocomplete="off" value="Search" onfocus="if(this.value=='Search')this.value=''" onblur="if(this.value=='')this.value='Search'" aria-label="Agency Search" />
                                 </div>
                                 <div class="submit-container">
                                     <button type="submit"><span class="ca-gov-icon-search"><span class="sr-only">Search</span></span></button>
