--- a/ssi/ask-bar.html
+++ b/ssi/ask-bar.html
@@ -1,5 +1,5 @@
 <div class="ask-group fade">
-    <div class="panel-group" id="askGroup" role="tablist" aria-multiselectable="true">
+    <div class="panel-group" id="askGroup">
 
         <div class="panel">
             <a class="btn btn-primary ask-button collapsed" role="button" data-toggle="collapse" data-parent="#askGroup" href="#askHow" aria-expanded="true" aria-controls="askHow"><span class="ca-gov-icon-online-services"></span>How</a>
