--- a/ssi/section-green-buildings.html
+++ b/ssi/section-green-buildings.html
@@ -1,6 +1,6 @@
 <div class="section section-standout">
     <div class="container">
-        <h2 class="text-center"><span style="color:#4DFF0F;">Greening</span> California's Government Sustainable State Buildings</h2>
+        <h2 class="text-center"><span style="color:#4DFF0F;">Greening</span> California's Government Systainable State Buildings</h2>
         <p class="lead text-center">The most recent data shows a double-digit percent deduction since 2003</p>
 
         <div class="carousel carousel-media">
