--- a/sample/course-detail.html
+++ b/sample/course-detail.html
@@ -92,10 +92,10 @@ Based on Twitter Bootstrap
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail.html" --></textarea>
+                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail-schema.html" --></textarea>
+                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
