--- a/sample/event-detail.html
+++ b/sample/event-detail.html
@@ -91,11 +91,11 @@ Based on Twitter Bootstrap
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
                     <div class="tab-pane active" id="html">
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-detail.html" --></textarea>
+                         <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-detail.html" --></textarea>
                     </div>
                     <div class="tab-pane" id="microdata">
                         <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each event item.</p>
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-detail-schema.html" --></textarea>
+                         <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-detail-schema.html" --></textarea>
                     </div>
                 </div>
             </div>
