--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -88,11 +88,11 @@ Based on Twitter Bootstrap
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
                     <div class="tab-pane active" id="html">
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list.html" --></textarea>
+                         <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list.html" --></textarea>
                     </div>
                     <div class="tab-pane" id="microdata">
                         <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each event-item.</p>
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-schema.html" --></textarea>
+                         <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-schema.html" --></textarea>
                     </div>
                 </div>
             </div>
@@ -115,11 +115,11 @@ Based on Twitter Bootstrap
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
                     <div class="tab-pane active" id="thumbhtml">
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail.html" --></textarea>
+                         <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail.html" --></textarea>
                     </div>
                     <div class="tab-pane" id="thumbmicrodata">
                         <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each event-item.</p>
-                         <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail-schema.html" --></textarea>
+                         <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail-schema.html" --></textarea>
                     </div>
                 </div>
             </div>
