--- a/sample/figure.html
+++ b/sample/figure.html
@@ -87,10 +87,10 @@ Based on Twitter Bootstrap
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/figure.html" --></textarea>
+                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/figure.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                 <textarea class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/media-schema.html" --></textarea>
+                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/media-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
