--- a/sample/profile-banners.html
+++ b/sample/profile-banners.html
@@ -86,10 +86,10 @@ Based on Twitter Bootstrap
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                <textarea id="sample-news-list" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners.html" --></textarea>
+                                <textarea aria-label="HTML Markup" id="sample-news-list" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                <textarea id="sample-news-list" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></textarea>
+                                <textarea aria-label="Microdata" id="sample-news-list-microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
