- Activated top level navigation links in touch mode in mobile view (first touch opens menu, the second touch opens the url link). - Added tabindex option to the search button in mobile view for accessibility. - Added separation lines to the subnav toggle arrows in mobile view - Updated nav mobile controls include file (fixed search icon placement in IOS)

--- a/ssi/mobile-controls.html
+++ b/ssi/mobile-controls.html
@@ -1,13 +1,12 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
-
-    <button class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></button>
     <span class="mobile-control-group mobile-header-icons">
-    	
         <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
     </span>
-    <span class="mobile-control toggle-search"><span class="ca-gov-icon-search" aria-hidden="true"></span><span class="sr-only">Search</span></span>
-    <span class="mobile-control-group mobile-menu-icons">
-    	<!-- Add more mobile controls here. These will be on the top right section of the expanded mobile menu -->
-    </span>
+    <div class="mobile-control-group main-nav-icons pull-right">
+        <button class="mobile-control toggle-menu pull-right" aria-expanded="false" aria-controls="navigation"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></button>
+        <button class="mobile-control toggle-search">
+            <span class="ca-gov-icon-search" aria-hidden="true"></span><span class="sr-only">Search</span>
+        </button>
+    </div>
 </div>
