- Added print media layout fixes for some samples - Added new Sacramento color scheme css file

--- a/sample/index.html
+++ b/sample/index.html
@@ -97,10 +97,7 @@
               <li><a href="colorscheme-mono.html">Mono</a></li>
               <li><a href="colorscheme-trinity.html">Trinity</a></li>
               <li><a href="colorscheme-eureka.html">Eureka</a></li>
-              <!-- <li><a href="colorscheme-orangecounty.html">Orange County</a></li>
-        <li><a href="colorscheme-pasorobles.html">Paso Robles</a></li>
-        <li><a href="colorscheme-santabarbara.html">Santa Barbara</a></li>
-        <li><a href="colorscheme-sierra.html">Sierra</a></li> -->
+              <li><a href="colorscheme-sacramento.html">Sacramento</a></li>
           </ul>
 
         <h2>Content Modules</h2>
