--- a/sample/modules/icon-blocks.html
+++ b/sample/modules/icon-blocks.html
@@ -2,7 +2,7 @@
 <div class="group p-t-80">
     <div class="third m-b-60">
         <!-- Icon Blocks -->
-        <div class="shadow2 text-center p-x-md p-b-lg">
+        <div class="shadow2 section-default text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
                 <i class="ca-gov-icon-ca-state"></i>
             </span>
@@ -14,7 +14,7 @@
     </div>
     <div class="third m-b-60">
         <!-- Icon Blocks -->
-        <div class="shadow2 text-center p-x-md p-b-lg">
+        <div class="shadow2 section-primary text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
                 <i class="ca-gov-icon-lightbulb"></i>
             </span>
@@ -26,7 +26,7 @@
     </div>
     <div class="third m-b-60">
         <!-- Icon Blocks -->
-        <div class="shadow2 text-center p-x-md p-b-lg">
+        <div class="shadow2 section-standout text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
                 <i class="ca-gov-icon-graduate"></i>
             </span>
