--- a/ssi/mobile-controls.html
+++ b/ssi/mobile-controls.html
@@ -4,9 +4,9 @@
         <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
     </span>
     <div class="mobile-control-group main-nav-icons pull-right">
-        <button class="mobile-control toggle-menu pull-right" aria-expanded="false" aria-controls="navigation"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></button>
+        <button class="mobile-control toggle-menu pull-right" aria-expanded="false" aria-controls="navigation"><span class="ca-gov-icon-menu hidden-print" aria-hidden="true"></span><span class="sr-only">Menu</span></button>
         <button class="mobile-control toggle-search">
-            <span class="ca-gov-icon-search" aria-hidden="true"></span><span class="sr-only">Search</span>
+            <span class="ca-gov-icon-search hidden-print" aria-hidden="true"></span><span class="sr-only">Search</span>
         </button>
     </div>
 </div>
