Added typography page. Updated source files.

--- a/sample/headers.html
+++ b/sample/headers.html
@@ -79,6 +79,12 @@ Based on Twitter Bootstrap
                     <textarea id="sample-headers" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/headers.html" --></textarea>
                 </div> 
             </div>
+            <br />
+            <div class="group">
+                <div class="col-sm-12">
+                    <p class="lead">For more information about California State Web Template typography refer to <a href="typography.html">typography</a> page.</p>
+                </div>
+            </div>
         </main>
     </div>
 </div>
