--- a/sample/index.html
+++ b/sample/index.html
@@ -157,6 +157,7 @@
               <li><a href="testimonials.html">Testimonials</a></li>
               <li><a href="text-accent.html">Text Accent Colors</a></li>
               <li><a href="toggle.html">Toggle</a></li>
+              <li><a href="typography.html">Typography</a></li>
           </ul>
        <h2>Dreamweaver Templates</h2>
           <ul class="list-primary">
