In main navigation replaced Contact Us with Web Standards link. In the utility header addded actual URL to contact us link that goes to contact page.

--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -22,7 +22,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -30,7 +31,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -42,7 +44,7 @@ Options are: megadropdown dropdown singlelevel
 
                 <div class="half">
                     <div class="nav-media">
-                         <div class="media unit2">
+                        <div class="media unit2">
                             <div class="media-left">
                                 <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
                             </div>
@@ -65,7 +67,7 @@ Options are: megadropdown dropdown singlelevel
                         </div>
                     </div>
                 </div>
-             </div>
+            </div>
         </li>
 
         <li class="nav-item">
@@ -80,7 +82,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -88,7 +91,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -101,7 +105,7 @@ Options are: megadropdown dropdown singlelevel
                 <div class="half with-image-left">
                     <div class="nav-media" style="background:url('/sample/images/sample-nav-image2.jpg')"></div>
                 </div>
-             </div>
+            </div>
         </li>
 
         <!-- LEFT ALIGNED IMAGE -->
@@ -118,7 +122,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -126,7 +131,8 @@ Options are: megadropdown dropdown singlelevel
                             <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
                         </li>
                         <li class="unit2">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
+                            <a href="/" class="second-level-link">
+                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
                                 <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
                             </a>
                         </li>
@@ -138,18 +144,17 @@ Options are: megadropdown dropdown singlelevel
                 <div class="quarter with-image-left">
                     <div class="nav-media" style="background:url('/sample/images/sample-nav-image2.jpg')"></div>
                 </div>
-             </div>
+            </div>
         </li>
         <li class="nav-item">
             <a href="/structure.html" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
         </li>
         <li class="nav-item">
+            <a href="https://webstandards.ca.gov" class="first-level-link" target="_blank"><span class="ca-gov-icon-state" aria-hidden="true"></span>Web Standards</a>
+        </li>
+        <li class="nav-item">
             <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
-
-     
-        <li class="nav-item">
-            <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
         </li>
         <li class="nav-item" id='nav-item-search'>
             <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
