--- a/ssi/utility-header.html
+++ b/ssi/utility-header.html
@@ -16,7 +16,7 @@
             </div>
             <div class="half settings-links p-t-sm">
                 <ul class="utility-links ">
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="/contact.html">Contact Us</a></li>
                     <li><button class="btn btn-xs btn-primary" data-toggle="collapse" href="#siteSettings" aria-expanded="false" aria-controls="siteSettings"><span class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</button></li>
                 </ul>
             </div>
