Updated owl carousel plugin to version 2.3.4. Made Slide show banner pause/play button accessible.

--- a/sample/modules/carousel-media.html
+++ b/sample/modules/carousel-media.html
@@ -1,4 +1,4 @@
-<div class="carousel carousel-media">
+<div class="carousel owl-carousel carousel-media">
     <div class="item"><div class="preview-image"><img src="images/gallery/orangecounty-thumb.jpg" alt="preview 1"></div><div class="details">Item 1 Description</div></div>
     <div class="item"><div class="preview-image"><img src="images/gallery/pasorobles-thumb.jpg" alt="preview 2"></div><div class="details">Item 2 Description</div></div>
     <div class="item"><div class="preview-image"><img src="images/gallery/santabarbara-thumb.jpg" alt="preview 3"></div><div class="details">Item 3 Description</div></div>
