--- a/ssi/header-slideshow-banner.html
+++ b/ssi/header-slideshow-banner.html
@@ -1,5 +1,5 @@
 <div class="header-slideshow-banner hidden-print">
-	<div id="primary-carousel" class="carousel carousel-banner">
+	<div id="primary-carousel" class="carousel owl-carousel carousel-banner">
         <div class="slide" style="background-image: url('/sample/images/background_1.jpg');">
             <a href="/">
                 <p class="slide-text"><span class="title">Slideshow Banner</span><br>Caption for rotating banner. This caption is a link!</p>
